# sjconf-sl2d

./: ChangeLog  Makefile.am  README.rst  configure.ac
confs/: Makefile.am  sl2d.conf
debian/: changelog  control  copyright  rules  sjconf-sl2d.install  sjconf-sl2d.postinst  sjconf-sl2d.prerm
doc/: Makefile.am  sjconf-sl2d.t2t
plugins/: sl2d.py.in
templates/: Makefile.am
templates/sl2d/: Makefile.am  sl2d
