dnl Process this file with autoconf to produce a configure script.
AC_INIT(sjconf-sl2d, 0.2.2~dev)

dnl 2.59 is needed for AS_HELP_STRING
AC_PREREQ(2.59)

AM_INIT_AUTOMAKE([foreign])

AC_PROG_SJCONF

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 confs/Makefile
                 plugins/sl2d.py
                 ])

AC_OUTPUT
